**LAB ASSIGNMENT 6**
Main Features:
    -Implemented a firebase realtime database in the usr-info folder of the dead-net app.
    -Added the HTTPClientModule in app.module.ts.
    
**LAB ASSIGNMENT 5**
Main Features:
    - Implemented and cleaned up vertical card component, header, and secondary header for New-Releases layout.
        -- Vertical card component is implemented with an *ngFor loop.
    - Implemented and cleaned up Grateful Gear Banner, Features section, and video card components for Home layout.
        -- Features section is implemented with an *ngFor loop.
    - Cleaned up and formated original components for Home Layout
Bonus Features:
    - Added Horizontal card components to the CD layout.
    - Added new footer component to the New-Releases layout

**LAB ASSIGNMENT 4**
Main Features:
    -Added Layout Components:
        -- 7 inch Singles Collection
        -- CD
        -- Dave's Picks
        -- Dead & Company
        -- Digital
        -- Home
        -- LP
        -- New Releases
        -- Video
    - Each layout has a set path in the app-routing.module.ts file
    - Each link in the STORE tab under the Music section has a routingLink to the appropriate layout component
    - Added secondary navbar and vertical card components using *ngFor loop to New Releases layout component.
    
Bonus Features:

**LAB ASSIGNMENT 3**
Main Features:
    -Added mock_product_list.ts
        --created a list for the vertical card components under the "New Music" section of the website.

    -Added product-item.model.ts
        --Implemented new TypeScript class called ProductItemModel
            +Attributes: img and description
            +Constructor for ProductItemModel
            
    -Updated vertical.card.component.ts
        --Added img and description attributes with @Input() decorators
        --Updated constructor to set img and description to default values

    -Updated vertical.card.component.html