@@ -1,22 +1,0 @@
-export const features_list = [
-    {
-        img: "./assets/Features Images/taperssection.png",
-        date: "February 21, 2022"
-    },
-    {
-        img: "./assets/Features Images/jamoftheweek.png",
-        date: "February 18, 2022"
-    },
-    {
-        img: "./assets/Features Images/gdhour.png",
-        date: "February 16, 2022"
-    },
-    {
-        img: "./assets/Features Images/dead_deadnet_deadcast_features_tile_255x255v1_1.jpg",
-        date: "December 23, 2021"
-    },
-    {
-        img: "./assets/Features Images/dead_deadnet_tile_live_v6d.jpg",
-        date: "April 22, 2021"
-    }
-]
