@@ -30,7 +30,7 @@
     </div>
     <div class="news col-4">
         <div *ngFor="let news of newsItems">
-            <dead-card-horizontal cardDate={{news.cardDate}} cardDescription={{news.cardDescription}}>
+            <dead-card-horizontal cardDate={{news.date}} cardDescription={{news.description}}>
                 Loading...
             </dead-card-horizontal>
         </div>
