@@ -1,9 +1,7 @@
 import { Component, OnInit } from "@angular/core";
-import { mock_news_list } from "src/app/Horizontal Card/mock_news_list";
 import { NewsItemModel } from "src/app/Horizontal Card/news-item.model";
-import { HomeLayoutService } from "src/app/Vertical Card/home-layout.service";
+import { HomeLayoutService } from "src/app/Layouts/Home/home-layout.service";
 import { ProductItemModel } from "src/app/Vertical Card/product-item.model";
-import { features_list } from "./Features/features_list";
 import { HomeFeaturesModel } from "./Features/home-features.model";
 
 @Component({
@@ -12,28 +10,36 @@ import { HomeFeaturesModel } from "./Features/home-features.model";
     styleUrls: ["home-layout.component.css"]
 })
 
-export class HomeLayoutComponent implements OnInit{
+export class HomeLayoutComponent implements OnInit {
     products: ProductItemModel[] = [];
     newsItems: NewsItemModel[] = [];
     features: HomeFeaturesModel[] = [];
 
-    constructor(private homeProducts:HomeLayoutService) {
-        for (var news of mock_news_list) {
-            console.log(news);
-            this.newsItems.push(news);
-        }
-        for (var feature of features_list) {
-            console.log(feature);
-            this.features.push(feature);
-        }
+    constructor(private homeProducts: HomeLayoutService) {
     }
 
     ngOnInit(): void {
         this.homeProducts.getHomeNewMusic().subscribe(data => {
             console.log("Fetching New Music data for home");
-            for(var product of data) {
+            for (var product of data) {
                 console.log(product);
                 this.products.push(product);
+            }
+        })
+
+        this.homeProducts.getHomeNews().subscribe(data => {
+            console.log("Fetching News data for home");
+            for (var news of data) {
+                console.log(news);
+                this.newsItems.push(news);
+            }
+        })
+
+        this.homeProducts.getHomeFeatures().subscribe(data => {
+            console.log("Fetching the features data for home");
+            for (var feature of data) {
+                console.log(feature);
+                this.features.push(feature);
             }
         })
     }
