@@ -1,6 +1,5 @@
 import { Component } from '@angular/core';
 import { NewsItemModel } from './Horizontal Card/news-item.model';
-import { mock_news_list } from './Horizontal Card/mock_news_list';
 import { ProductItemModel } from './Vertical Card/product-item.model';
 
 @Component({
